--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -15,17 +15,16 @@ jobs:
     name: 'Unit Test'
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
         with:
-          node-version: 14.x
-      - uses: actions/cache@v2
-        id: npm-cache
+          fetch-depth: 0
+      - uses: actions/setup-node@v3
         with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/package-lock.json') }}
-      - name: Install dependencies
-        if: steps.npm-cache.outputs.cache-hit != 'true'
-        run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
+          node-version: 'lts/fermium'
+          fetch-depth: 0
+          cache: 'npm'
+          cache-dependency-path: '**/package-lock.json'
+      - name: Install & Test
+        run: |
+          npm ci
+          npm test
